--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "googleapis": "^144.0.0",
+    "motion": "^12.9.2",
     "next": "^15.2.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
