--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.9.2",
     "googleapis": "^144.0.0",
     "motion": "^12.9.2",
     "next": "^15.2.5",
